@startuml
class java_design_patterns.C_composite.family.Counter {
~ int myCount
+ void increment()
+ void reset()
+ int value()
}
class java_design_patterns.C_composite.family.PersonWithNoChildren {
+ void addChildren(PersonInterface)
+ Integer getIndex()
+ String getName()
+ void printTree()
+ List<PersonInterface> getChildren()
+ int nofChildren()
+ int nofOffSprings()
# void nofOffSpringsRec(PersonInterface,Counter)
}
abstract class java_design_patterns.C_composite.family.PersonWithOrWithNoChildrenAbstract {
~ Integer id
~ String name
~ Counter counter
# {abstract}void nofOffSpringsRec(PersonInterface,Counter)
}
interface java_design_patterns.C_composite.family.PersonInterface {
~ void addChildren(PersonInterface)
~ List<PersonInterface> getChildren()
~ Integer getIndex()
~ String getName()
~ int nofChildren()
~ int nofOffSprings()
~ void printTree()
}
class java_design_patterns.C_composite.family.PersonWithChildren {
~ List<PersonInterface> children
+ void addChildren(PersonInterface)
+ Integer getIndex()
+ String getName()
+ List<PersonInterface> getChildren()
+ int nofChildren()
+ void printTree()
+ int nofOffSprings()
# void nofOffSpringsRec(PersonInterface,Counter)
}


java_design_patterns.C_composite.family.PersonWithOrWithNoChildrenAbstract <|-- java_design_patterns.C_composite.family.PersonWithNoChildren
java_design_patterns.C_composite.family.PersonInterface <|.. java_design_patterns.C_composite.family.PersonWithOrWithNoChildrenAbstract
java_design_patterns.C_composite.family.PersonWithOrWithNoChildrenAbstract <|-- java_design_patterns.C_composite.family.PersonWithChildren
@enduml